# python_game_with_minigames_and_riddles

./: .breakpoints  2048.py  README.md  arkanoid.py  database.db  invaders.py  main.py  math game.py  pyproject.toml  snake.py  solution.md  sudoku.py  tetris.py  tictactoe.py
pygameexp/: cell.py  pygame.py
