[tool.poetry]
name = "repl_python3_pythongamewithminigamesandriddles-1"
version = "0.1.0"
description = ""
authors = ["elpandino <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
getch = "^1.0"
pygame = "^2.0.1"
freegames = "^2.3.2"
board = "^1.0"
playsound = "^1.3.0"
keyboard = "^0.13.5"
cell = "^0.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
